<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:text="@string/create_exercise_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/spinnerExerciseType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etExerciseName"
        android:hint="@string/hint_exercise_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etExerciseSets"
        android:hint="@string/hint_exercise_sets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"/>

    <EditText
        android:id="@+id/etExerciseReps"
        android:hint="@string/hint_exercise_reps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"/>

    <EditText
        android:id="@+id/etExerciseWeight"
        android:hint="@string/hint_exercise_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"/>

    <Button
        android:id="@+id/btnSave"
        android:text="@string/save_button_exercise_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>