<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    card_view:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/ivIcon"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:scaleType="fitXY"
            android:layout_margin="10dp"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvExercise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="20sp"
                android:text="@string/exercise_name_main_screen" />

            <TextView
                android:id="@+id/tvWeight"
                android:layout_width="wrap_content"
                android:textSize="18sp"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/exercise_weight_main_screen" />

            <TextView
                android:id="@+id/tvSets"
                android:layout_width="wrap_content"
                android:textSize="18sp"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/exercise_sets_main_screen" />

            <TextView
                android:id="@+id/tvReps"
                android:layout_width="wrap_content"
                android:textSize="18sp"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/exercise_reps_main_screen" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_button_main_screen"
                android:textColor="#000000"
                android:textAllCaps="false"
                android:id="@+id/delete_button"

                />

        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>